Bug #18436 RBR: Replication to partition engine triggers assertion on slave side
Submitted: 22 Mar 2006 21:11 Modified: 11 Apr 2006 15:27
Reporter: Mats Kindahl
Status: Closed
Category:Server: Replication Severity:S2 (Serious)
Version:5.1.8 OS:Any (ALL)
Assigned to: Mats Kindahl Target Version:

[22 Mar 2006 21:11] Mats Kindahl
Description:
Replication to a partition storage engine will trigger an assertion inside the partition
engine.

How to repeat:
CREATE TABLE t1 (id MEDIUMINT NOT NULL, b1 BIT(8), vc VARCHAR(255), 
                 bc CHAR(255), d DECIMAL(10,4) DEFAULT 0, 
                 f FLOAT DEFAULT 0, total BIGINT UNSIGNED, 
                 y YEAR, t DATE)
                 PARTITION BY RANGE (YEAR(t)) 
                (PARTITION p0 VALUES LESS THAN (1901), 
                 PARTITION p1 VALUES LESS THAN (1946),  
                 PARTITION p2 VALUES LESS THAN (1966), 
                 PARTITION p3 VALUES LESS THAN (1986), 
                 PARTITION p4 VALUES LESS THAN (2005), 
                 PARTITION p5 VALUES LESS THAN MAXVALUE);

UPDATE t1 SET b1 = 0, t="2006-02-22" WHERE id = 412;
[11 Apr 2006 15:27] MC Brown
Documented in changelog for 5.1.8. 

Replication of data stored in a partitioned table would cause slave servers to issue a
assertion and terminate. (Bug #18436)